// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
/>
`;

exports[`search results empty 1`] = `
.c0 {
  width: 100%;
  padding: 1rem 0;
  text-align: center;
}

<div
  className="c0"
>
  Nothing found
</div>
`;

exports[`search results render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-viewer__node-2 uast-item"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible collapsed"
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
  </div>
</div>
`;

exports[`tree render 1`] = `
<div
  className="uast-viewer"
  onMouseLeave={[Function]}
  style={
    Object {
      "overflow": "auto",
    }
  }
>
  <div
    className="uast-viewer__node-1 uast-item"
    onClick={[Function]}
    onMouseMove={[Function]}
  >
    <div
      className="uast-title uast-title-collapsible collapsed"
      onClick={[Function]}
    >
      <summary
        className="uast-label"
      >
        Node
      </summary>
    </div>
  </div>
</div>
`;
